# nostalgic-games

./: CMakeLists.txt  README  README.md  nostalgic-games.sln  nostalgic-games.vcxproj  nostalgic-games.vcxproj.filters  resources.xml
src/managers/: FontManager.cpp  FontManager.h  ResourceBase.h  State.h  StateManager.cpp  StateManager.h  StringManager.cpp  StringManager.h  TextureManager.cpp  TextureManager.h
src/ng/: Logger.h  Singleton.h  Utils.cpp  Utils.h  VisualObject.cpp  VisualObject.h  main.cpp
src/states/breakout/: BreakoutAboutState.cpp  BreakoutAboutState.h  BreakoutPauseState.cpp  BreakoutPauseState.h  BreakoutReadyState.cpp  BreakoutReadyState.h  BreakoutState.cpp  BreakoutState.h  BreakoutStateLevels.h
src/states/intro/: IntroState.cpp  IntroState.h
src/states/login/: LoginState.cpp  LoginState.h
src/states/menu/: MenuState.cpp  MenuState.h
